add swag for user getting wallet by UserId
